# biom-format

./: .coveragerc  .gitignore  .travis.yml  BIOM_LICENSE.html  CNAME  COPYING  COPYING.txt  ChangeLog  ChangeLog.md  INSTALL  MANIFEST.in  Makefile  README.md  aarch64.Dockerfile  index.html  o.txt  objects.inv  pyproject.toml  pytest.ini  requirements.txt  rtd_requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  usage_tests.sh
.github/workflows/: python-package-conda.yml  release.yml  wheels.yml
R-code/: README.md  biom-run-unit-tests.R  biom_check.sh  biom_install.sh  biom_unit_only.sh  rbiom-run-unit-tests.R  rbiom_check.sh  rbiom_install.sh  rbiom_unit_only.sh
R-code/RBIOM/: DESCRIPTION  NAMESPACE  README.md  TODO.txt
R-code/RBIOM/R/: .Rhistory  BIOM-class.R  IO-methods.R  allClasses.R  allPackage.R
R-code/RBIOM/man/: BIOM-class.Rd  BIOM.Rd  RBIOM-package.Rd  access.Rd  accessor-functions.Rd  read_biom.Rd  show-methods.Rd
R-code/RBIOM/tests/: testthat-RBIOM.R
R-code/biom/: DESCRIPTION  LICENSE  NAMESPACE  README.html  README.md  TODO.md
R-code/biom/R/: BIOM-class.R  IO-methods.R  allClasses.R  allPackage.R  validity-methods.R
R-code/biom/inst/: NEWS
R-code/biom/man/: biom-class.Rd  biom-methods.Rd  biom-package.Rd  biom_data-methods.Rd  biom_shape-methods.Rd  colnames-methods.Rd  header-methods.Rd  matrix_element_type-methods.Rd  ncol-methods.Rd  nrow-methods.Rd  observation_metadata-methods.Rd  read_biom.Rd  rownames-methods.Rd  sample_metadata-methods.Rd  show-methods.Rd  write_biom.Rd
R-code/biom/tests/: testthat-biom.R
R-code/rbiom/: DESCRIPTION  NAMESPACE
R-code/rbiom/R/: .Rapp.history  BIOM-class.R  IO-methods.R  allClasses.R  allPackage.R  validity-methods.R
R-code/rbiom/man/: accessor-functions.Rd  biom-class.Rd  biom-methods.Rd  biom.Rd  biom_shape-methods.Rd  biom_table-methods.Rd  colnames-methods.Rd  header-methods.Rd  matrix_element_type-methods.Rd  metadata-access.Rd  ncol-methods.Rd  nrow-methods.Rd  observ_meta-methods.Rd  observation_metadata-methods.Rd  rbiom-package.Rd  read_biom.Rd  rownames-methods.Rd  sample_meta-methods.Rd  sample_metadata-methods.Rd  show-methods.Rd  write_biom.Rd
_sources/: BIOM_LICENSE.txt  index.rst.txt  index.txt
_sources/documentation/: biom_conversion.rst.txt  biom_conversion.txt  biom_format.rst.txt  biom_format.txt  index.rst.txt  index.txt  summarizing_biom_tables.txt  table_objects.txt
_sources/documentation/format_versions/: biom-1.0.rst.txt  (+1 more)
_static/: documentation_options.js  haiku.css
biom/: __init__.py  _filter.c  _filter.pyx  _subsample.c  _subsample.pyx  _subsample_cpp.cpp  _subsample_cpp.hpp  _transform.c  _transform.pyx  err.py  exception.py  parse.py  table.py  unit_test.py  util.py
biom/assests/: exercise_cli.sh  verify_release_candidate.py
biom/assets/: exercise_api.py  exercise_cli.sh
biom/backends/: csmat.py  scipysparse.py
biom/cli/: __init__.py  installation_informer.py  metadata_adder.py  metadata_exporter.py  table_converter.py  table_head.py  table_ids.py  table_normalizer.py  table_subsetter.py  table_summarizer.py  table_validator.py  uc_processor.py  util.py
biom/commands/: installation_informer.py  metadata_adder.py  start_server.py  table_converter.py  table_normalizer.py  table_subsetter.py  table_summarizer.py  table_validator.py
biom/tests/: long_lines.py  test_err.py  test_parse.py  test_table.py  test_util.py
biom_format.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  requires.txt  top_level.txt
ci/: aarch64.conda_requirements.txt  conda_host_env.yml  conda_requirements.txt  requirements.doc.txt
doc/: BIOM_LICENSE.rst  Makefile  conf.py  index.rst
doc/_templates/: layout.html
doc/documentation/: adding_metadata.rst  biom_conversion.rst  biom_format.rst  change_sparse_backend.rst  index.rst  quick_usage_examples.rst  summarizing_biom_tables.rst  table_objects.rst
documentation/: adding_metadata.html  biom_conversion.html  biom_format.html  change_sparse_backend.html  index.html  quick_usage_examples.html  summarizing_biom_tables.html  table_objects.html
documentation/format_versions/: biom-1.0.html  biom-2.0.html  biom-2.1.html
examples/: min_dense_otu_table.biom  min_sparse_otu_table.biom  min_sparse_otu_table_hdf5.biom  obs_md.txt  rich_dense_otu_table.biom  rich_sparse_otu_table.biom  rich_sparse_otu_table_hdf5.biom  rich_sparse_otu_table_hdf5_group_metadata.biom  sam_md.txt
images/: biom-logos.ai
licenses/: numpydoc.txt  scikit-learn.txt
python-code/biom/: __init__.py  biomdb.py  csmat.py  dbdata.py  exception.py  parse.py  scipysparse.py  sparsedict.py  sparsemat.py  table.py  unit_test.py  util.py
python-code/support-code/: _sparsemat.pyx  setup.py  sparsemat.py  sparsemat.pyx  sparsemat_lib.cpp  sparsemat_lib.h  test_sparsemat.py
python-code/tests/: all_tests.py  test_biomdb.py  test_csmat.py  test_dbdata.py  test_parse.py  test_sparsedict.py  test_sparsemat.py  test_table.py  test_unit_test.py  test_util.py
scripts/: add_metadata.py  biom  biom_validator.py  biomcli  convert_biom.py  print_biom_config.py  print_biom_python_config.py  print_biom_table_summary.py  serve-biom  subset_biom.py  summarize_otu_distributions.py  test_biom_validator.py
support_files/: biom_config
tests/: test_err.py  test_examples.py  test_parse.py  test_table.py  test_unit_test.py  test_util.py
tests/bench/: bench.sh  benchit.sh  make_and_profile_biom_table.py  make_tables.py  test_make_tables.py
tests/test_backends/: test_csmat.py  test_scipysparse.py
tests/test_cli/: __init__.py  test_add_metadata.py  test_show_install_info.py  test_subset_table.py  test_summarize_table.py  test_table_converter.py  test_table_normalizer.py  test_uc_processor.py  test_validate_table.py
tests/test_commands/: test_installation_informer.py  test_metadata_adder.py  test_table_converter.py  test_table_normalizer.py  test_table_subsetter.py  test_table_summarizer.py  test_table_validator.py
tests/test_data/: empty.biom  test.biom  test.json
x/: otu_table_L2.biom  otu_table_L3.biom  otu_table_L4.biom  otu_table_L5.biom  otu_table_L6.biom
(+212 files in other folders)
